--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
-[Bb]in/
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
+
+LightBuzz.Azure/LightBuzz.Azure/[Bb]in/
+LightBuzz.Azure/LightBuzz.Azure.UWP/[Bb]in/
 
 # Visual Studio 2015 cache directory
 .vs/
