--- a/LightBuzz.Azure/LightBuzz.Azure/LightBuzz.Azure.csproj
+++ b/LightBuzz.Azure/LightBuzz.Azure/LightBuzz.Azure.csproj
@@ -69,6 +69,7 @@
     <Compile Include="LightBuzzHttpsHandler.cs" />
     <Compile Include="LightBuzzMobileServiceClient.cs" />
     <Compile Include="LightBuzzMobileServiceClientCloudOnly.cs" />
+    <Compile Include="LightBuzzMobileServiceClientExtensions.cs" />
     <Compile Include="Microsoft.Azure.Mobile.Client.SQLiteStore\ColumnDefinition.cs" />
     <Compile Include="Microsoft.Azure.Mobile.Client.SQLiteStore\EnumerableExtensions.cs" />
     <Compile Include="Microsoft.Azure.Mobile.Client.SQLiteStore\MobileServiceSQLiteStore.cs" />
