Udpated the documentation and generated the new dll files.

--- a/LightBuzz.Azure/LightBuzz.Azure.UWP/LightBuzz.Azure.UWP.csproj
+++ b/LightBuzz.Azure/LightBuzz.Azure.UWP/LightBuzz.Azure.UWP.csproj
@@ -105,6 +105,9 @@
     <Compile Include="..\LightBuzz.Azure\Microsoft.Azure.Mobile.Client.SQLiteStore\TableDefinition.cs">
       <Link>Microsoft.Azure.Mobile.Client.SQLiteStore\TableDefinition.cs</Link>
     </Compile>
+    <Compile Include="..\LightBuzz.Azure\NamespaceDoc.cs">
+      <Link>NamespaceDoc.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
