--- a/LightBuzz.Azure/LightBuzz.Azure.UWP/LightBuzz.Azure.UWP.csproj
+++ b/LightBuzz.Azure/LightBuzz.Azure.UWP/LightBuzz.Azure.UWP.csproj
@@ -140,8 +140,7 @@
     <Reference Include="Microsoft.Azure.Mobile.Client.SQLiteStore">
       <HintPath>..\..\LightBuzz.Azure.Unity\Assets\LightBuzz_Azure\Plugins\Azure\WSA\Microsoft.Azure.Mobile.Client.SQLiteStore.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\LightBuzz.Azure.Unity\Assets\LightBuzz_Azure\Plugins\Newtonsoft\WSA\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
