--- a/LightBuzz.Azure/LightBuzz.Azure/LightBuzz.Azure.csproj
+++ b/LightBuzz.Azure/LightBuzz.Azure/LightBuzz.Azure.csproj
@@ -43,7 +43,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\LightBuzz.Azure.Unity\Assets\LightBuzz_Azure\Plugins\Newtonsoft\Assemblies\Standalone\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\LightBuzz.Azure.Unity\Assets\LightBuzz_Azure\Plugins\Newtonsoft\x86_64\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -62,6 +62,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppServiceTableCriteria.cs" />
+    <Compile Include="AppServiceTablePredicate.cs" />
     <Compile Include="AppServiceTableDAO.cs" />
     <Compile Include="LightBuzzCertificateValidation.cs" />
     <Compile Include="LightBuzzHttpsHandler.cs" />
